--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -24,3 +24,13 @@ body {
 #new-article-button {
   margin-bottom: 10px;
 }
+
+#article-date {
+  margin-bottom: 40px;
+  
+}
+
+.article-detail-title {
+  font-size: 4em;
+  margin-bottom: 40px;
+}
