--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,8 +5,7 @@
 <% @articles.each do |article| %>
   <div class="well well-lg">
     <div class="article-title">
-      <%= link_to article.title, article_path(article)
-      %>
+      <%= link_to article.title, article_path(article) %>
     </div>
     <div class="article-body">
       <%= truncate(article.body, length: 500) %>
