implement show article feature

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,7 +2,7 @@
   <h1 class="article-detail-title"><%= @article.title %></h1>
   
   <div class="glyphicon glyphicon-calendar" id="article-date">
-    <%= @article.created_at.strftime("%b, %d, %Y") %>
+    <%= @article.created_at.strftime("%b %d, %Y") %>
   </div>
   
   <div class="article-body">
