--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -7,8 +7,8 @@ body {
   color: #791e9e;
 }
 
-.article-title, .article.body {
-  padding-left: .7em;
+.article-title, .article-body {
+  padding-left: 15px;
 }
 
 .article-title {
@@ -65,4 +65,10 @@ body {
   border-color: #d6e9c6;
   color: #468847;
   text-align: left;
+}
+
+.author {
+  padding-top: 15px;
+  padding-left: 15px;
+  font-style: italic;
 }
